<resources>
    <string name="app_name">Weather Report</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Title</string>
    <string name="name_text">Name</string>
    <string name="save_text">save</string>
    <string name="delete_text">delete</string>
    <string name="place_text">Place</string>
    <string name="image_text">get image</string>
</resources>
