<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp" app:srcCompat="@drawable/cloudy"
            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView1" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/imageView"/>
    <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/titleEdit" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView1"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:inputType="text"
            android:gravity="left"/>
    <TextView
            android:text="@string/place_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/titleEdit"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/placeEdit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:gravity="left" android:inputType="text"/>
    <TextView
            android:text="@string/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/placeEdit"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/nameEdit" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:gravity="left"
            android:inputType="text"/>
    <Button
            android:text="@string/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveBtn" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <Button
            android:text="@string/delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/deleteBtn"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="24dp"
            android:layout_marginLeft="80dp" android:layout_marginStart="80dp"
            app:layout_constraintStart_toEndOf="@+id/saveBtn"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
</android.support.constraint.ConstraintLayout>